--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
         "doctrine/dbal": "^2.12",
         "facade/ignition": "^2.3.6",
-        "fakerphp/faker": "^1.9.1",
         "laravel/ui": "^3.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
